--- a/wp-content/plugins/wp-qr-trackr/assets/css/admin.css
+++ b/wp-content/plugins/wp-qr-trackr/assets/css/admin.css
@@ -12,7 +12,7 @@
 	background: #fff;
 	padding: 20px;
 	border: 1px solid #ccd0d4;
-	box-shadow: 0 1px 1px rgba(0,0,0,.04);
+	box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
 }
 
 .qr-trackr-qr-image {
@@ -37,7 +37,7 @@
 	background: #fff;
 	padding: 20px;
 	border: 1px solid #ccd0d4;
-	box-shadow: 0 1px 1px rgba(0,0,0,.04);
+	box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
 	margin-top: 20px;
 }
 
@@ -48,7 +48,7 @@
 }
 
 /* Responsive styles */
-@media screen and (max-width: 782px) {
+@media screen and (width <= 782px) {
 	.qr-trackr-create-form select {
 		min-width: 100%;
 		margin-bottom: 10px;
